Changed Record Button to open OBS instead

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
         "types": [],
         "experimentalDecorators": true,
         "jsx": "react-jsx",
-        "jsxImportSource": "astal/gtk3"
-    }
+        "jsxImportSource": "astal/gtk3",
+    },
 }
